src/orgs/usa/data-model/objects/Lead/fields/AdditionalEmail__c.field-meta.xml
<CustomField>
    <fullName>AdditionalEmail__c</fullName>
    <label>Additional Email</label>
    <type>Email</type>
</CustomField>