src/orgs/usa/data-model/objects/Lead/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand</valueSetName>
    </valueSet>
</CustomField>