src/orgs/usa/data-model/objects/Lead/fields/DoNotSyncWithMarketingCloud__c.field-meta.xml
<CustomField>
    <fullName>DoNotSyncWithMarketingCloud__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, Lead won&apos;t be synchronized with Marketing Cloud.</inlineHelpText>
    <label>Do not sync with Marteking Cloud</label>
    <type>Checkbox</type>
</CustomField>