src/orgs/usa/data-model/objects/Lead/fields/EmrServer__c.field-meta.xml
<CustomField>
    <fullName>EmrServer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Artemis Server</label>
    <referenceTo>EmrServer__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>