src/orgs/usa/data-model/objects/Lead/fields/InternalComments__c.field-meta.xml
<CustomField>
    <fullName>InternalComments__c</fullName>
    <label>Internal Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>