src/orgs/usa/data-model/objects/Lead/fields/ObGynProvider__c.field-meta.xml
<CustomField>
    <fullName>ObGynProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OB/GYN Provider</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please make sure to select a Provider type of contact.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>OB/GYN Providing Leads</relationshipLabel>
    <relationshipName>ObGynProviderLeads</relationshipName>
    <type>Lookup</type>
</CustomField>