src/orgs/usa/data-model/objects/Lead/fields/PcpProvider__c.field-meta.xml
<CustomField>
    <fullName>PcpProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PCP Provider</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please make sure to select a Provider type of contact.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PCP Providing Leads</relationshipLabel>
    <relationshipName>PcpProvidingLeads</relationshipName>
    <type>Lookup</type>
</CustomField>