src/orgs/usa/data-model/objects/Lead/fields/PersonEmployer__c.field-meta.xml
<CustomField>
    <fullName>PersonEmployer__c</fullName>
    <label>Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>