src/orgs/usa/data-model/objects/Lead/fields/PersonInterests__c.field-meta.xml
<CustomField>
    <fullName>PersonInterests__c</fullName>
    <label>Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Donor Egg</fullName>
            </value>
            <value>
                <fullName>Egg Freezing</fullName>
            </value>
            <value>
                <fullName>Fertility Testing</fullName>
            </value>
            <value>
                <fullName>IVF</fullName>
            </value>
            <value>
                <fullName>IUI</fullName>
            </value>
            <value>
                <fullName>LGBTQ</fullName>
            </value>
            <value>
                <fullName>Tubal Ligation/Vasectomy</fullName>
            </value>
            <value>
                <fullName>Self Pay</fullName>
            </value>
            <value>
                <fullName>Single Parent by Choice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>