src/orgs/usa/data-model/objects/Lead/fields/PersonPatientType__c.field-meta.xml
<CustomField>
    <fullName>PersonPatientType__c</fullName>
    <label>Patient Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Infertility</fullName>
            </value>
            <value>
                <fullName>Fertility Preservation</fullName>
            </value>
            <value>
                <fullName>Registered in WinMed</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>GC Recipient</fullName>
            </value>
            <value>
                <fullName>GYN Only</fullName>
            </value>
            <value>
                <fullName>Monitoring Only</fullName>
            </value>
            <value>
                <fullName>Infertility</fullName>
            </value>
            <value>
                <fullName>Valerie Fund Patient</fullName>
            </value>
            <value>
                <fullName>LMN Owned</fullName>
            </value>
            <value>
                <fullName>LER Owned</fullName>
            </value>
            <value>
                <fullName>Former IVFNJ</fullName>
            </value>
            <value>
                <fullName>Nutrition Counsel Only</fullName>
            </value>
            <value>
                <fullName>International Patient</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
            <value>
                <fullName>Cancer Patient</fullName>
            </value>
            <value>
                <fullName>Patient Inquiry</fullName>
            </value>
            <value>
                <fullName>Patient Portal</fullName>
            </value>
            <value>
                <fullName>Referral Patient</fullName>
            </value>
            <value>
                <fullName>Directed Sperm Donor</fullName>
            </value>
            <value>
                <fullName>Intended Parent</fullName>
            </value>
            <value>
                <fullName>GC Recipient Partner</fullName>
            </value>
            <value>
                <fullName>FPE-Physician in Training</fullName>
            </value>
            <value>
                <fullName>Non-Tech Patient</fullName>
            </value>
            <value>
                <fullName>Abandoned Patient</fullName>
            </value>
            <value>
                <fullName>Endocrine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>