src/orgs/usa/data-model/objects/Lead/fields/PersonPreferredFirstName__c.field-meta.xml
<CustomField>
    <fullName>PersonPreferredFirstName__c</fullName>
    <label>Preferred First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>