src/orgs/usa/data-model/objects/Lead/fields/PersonPrimaryInsuranceCoPay__c.field-meta.xml
<CustomField>
    <fullName>PersonPrimaryInsuranceCoPay__c</fullName>
    <label>Primary Insurance Co-Pay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>