src/orgs/usa/data-model/objects/Lead/fields/PersonPrimaryInsuranceEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>PersonPrimaryInsuranceEffectiveDate__c</fullName>
    <label>Primary Insurance Effective Date</label>
    <type>Date</type>
</CustomField>