src/orgs/usa/data-model/objects/Lead/fields/PersonPrimaryInsuranceGroupNumber__c.field-meta.xml
<CustomField>
    <fullName>PersonPrimaryInsuranceGroupNumber__c</fullName>
    <label>Primary Insurance Group Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>