src/orgs/usa/data-model/objects/Lead/fields/PersonPrimaryInsurancePolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PersonPrimaryInsurancePolicyNumber__c</fullName>
    <label>Primary Insurance Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>