src/orgs/usa/data-model/objects/Lead/fields/PersonPrimaryInsuranceReferralRequired__c.field-meta.xml
<CustomField>
    <fullName>PersonPrimaryInsuranceReferralRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Referral Required</label>
    <type>Checkbox</type>
</CustomField>