src/orgs/usa/data-model/objects/Lead/fields/PersonPrimaryInsuranceSubscriber__c.field-meta.xml
<CustomField>
    <fullName>PersonPrimaryInsuranceSubscriber__c</fullName>
    <label>Primary Insurance Subscriber</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same as Patient</fullName>
            </value>
            <value>
                <fullName>Same as Partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>