src/orgs/usa/data-model/objects/Lead/fields/PersonRequestedPatientAdvocate__c.field-meta.xml
<CustomField>
    <fullName>PersonRequestedPatientAdvocate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requested Patient Advocate</label>
    <type>Checkbox</type>
</CustomField>