src/orgs/usa/data-model/objects/Lead/fields/PersonSecondaryInsuranceCoPay__c.field-meta.xml
<CustomField>
    <fullName>PersonSecondaryInsuranceCoPay__c</fullName>
    <label>Secondary Insurance Co-Pay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>