src/orgs/usa/data-model/objects/Lead/fields/PersonSecondaryInsuranceEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>PersonSecondaryInsuranceEffectiveDate__c</fullName>
    <label>Secondary Insurance Effective Date</label>
    <type>Date</type>
</CustomField>