src/orgs/usa/data-model/objects/Lead/fields/PersonSecondaryInsuranceGroupNumber__c.field-meta.xml
<CustomField>
    <fullName>PersonSecondaryInsuranceGroupNumber__c</fullName>
    <label>Secondary Insurance Group Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>