src/orgs/usa/data-model/objects/Lead/fields/PersonSecondaryInsurancePolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PersonSecondaryInsurancePolicyNumber__c</fullName>
    <label>Secondary Insurance Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>