src/orgs/usa/data-model/objects/Lead/fields/PersonSecondaryInsuranceReferralRequired__c.field-meta.xml
<CustomField>
    <fullName>PersonSecondaryInsuranceReferralRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Referral Required</label>
    <type>Checkbox</type>
</CustomField>