src/orgs/usa/data-model/objects/Lead/fields/PersonSecondaryInsuranceSubscriber__c.field-meta.xml
<CustomField>
    <fullName>PersonSecondaryInsuranceSubscriber__c</fullName>
    <label>Secondary Insurance Subscriber</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same as Patient</fullName>
            </value>
            <value>
                <fullName>Same as Partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>