src/orgs/usa/data-model/objects/Lead/fields/PersonSexualOrientation__c.field-meta.xml
<CustomField>
    <fullName>PersonSexualOrientation__c</fullName>
    <label>Sexual Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Straight or heterosexual</fullName>
            </value>
            <value>
                <fullName>Lesbian, gay or homosexual</fullName>
            </value>
            <value>
                <fullName>Bisexual</fullName>
            </value>
            <value>
                <fullName>Something else</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
            <value>
                <fullName>Choose not to disclose</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>