src/orgs/usa/data-model/objects/Lead/fields/PersonTertiaryInsuranceArtemisMetadata__c.field-meta.xml
<CustomField>
    <fullName>PersonTertiaryInsuranceArtemisMetadata__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tertiary Insurance Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>EmrServerInsuranceCompanyMetadata__c.EmrServer__c</field>
            <operation>equals</operation>
            <valueField>$Source.EmrServer__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>EmrServerInsuranceCompanyMetadata__c</referenceTo>
    <relationshipLabel>Patient Server Profiles (Lead Tertiary Insurance)</relationshipLabel>
    <relationshipName>LeadTertiaryInsurncPatientServerProfiles</relationshipName>
    <type>Lookup</type>
</CustomField>