src/orgs/usa/data-model/objects/Lead/fields/PersonTertiaryInsuranceCoPay__c.field-meta.xml
<CustomField>
    <fullName>PersonTertiaryInsuranceCoPay__c</fullName>
    <label>Tertiary Insurance Co-Pay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>