src/orgs/usa/data-model/objects/Lead/fields/PersonTertiaryInsuranceEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>PersonTertiaryInsuranceEffectiveDate__c</fullName>
    <label>Tertiary Insurance Effective Date</label>
    <type>Date</type>
</CustomField>