src/orgs/usa/data-model/objects/Lead/fields/PersonTertiaryInsuranceGroupNumber__c.field-meta.xml
<CustomField>
    <fullName>PersonTertiaryInsuranceGroupNumber__c</fullName>
    <label>Tertiary Insurance Group Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>