src/orgs/usa/data-model/objects/Lead/fields/PersonTertiaryInsurancePolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PersonTertiaryInsurancePolicyNumber__c</fullName>
    <label>Tertiary Insurance Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>