src/orgs/usa/data-model/objects/Lead/fields/PersonTertiaryInsuranceReferralRequired__c.field-meta.xml
<CustomField>
    <fullName>PersonTertiaryInsuranceReferralRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tertiary Referral Required</label>
    <type>Checkbox</type>
</CustomField>