src/orgs/usa/data-model/objects/Lead/fields/PersonTypeOfInsurance__c.field-meta.xml
<CustomField>
    <fullName>PersonTypeOfInsurance__c</fullName>
    <label>Type of Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Medicare / Medicaid</fullName>
            </value>
            <value>
                <fullName>No Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>