src/orgs/usa/data-model/objects/Lead/fields/PreferredLocation__c.field-meta.xml
<CustomField>
    <fullName>PreferredLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Location</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please make sure to select a Location Account.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>IVIRMA Location Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Preferred Location)</relationshipLabel>
    <relationshipName>PreferredLocationLeads</relationshipName>
    <type>Lookup</type>
</CustomField>