src/orgs/usa/data-model/objects/Lead/fields/PreferredProvider__c.field-meta.xml
<CustomField>
    <fullName>PreferredProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Provider</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Preferred Provider)</relationshipLabel>
    <relationshipName>PreferredProviderLeads</relationshipName>
    <type>Lookup</type>
</CustomField>