src/orgs/usa/data-model/objects/Lead/fields/ReferralComments__c.field-meta.xml
<CustomField>
    <fullName>ReferralComments__c</fullName>
    <label>Referral Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>