src/orgs/usa/data-model/objects/Lead/fields/ShowUiAlert_EmrServerNotLinkedToLocation__c.field-meta.xml
<CustomField>
    <fullName>ShowUiAlert_EmrServerNotLinkedToLocation__c</fullName>
    <formula>AND(
    NOT(ISBLANK(EmrServer__c)),
				NOT(ISBLANK(PreferredLocation__c)),
				NOT(ISBLANK(PreferredLocation__r.LocationEmrServer__c)),
				PreferredLocation__r.LocationEmrServer__c &lt;&gt; EmrServer__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UI Alert - Show Server not from Location</label>
    <type>Checkbox</type>
</CustomField>