src/orgs/usa/data-model/objects/Lead/fields/ShowUiAlert_LocationNotFromBrand__c.field-meta.xml
<CustomField>
    <fullName>ShowUiAlert_LocationNotFromBrand__c</fullName>
    <formula>AND(
    NOT(ISBLANK(PreferredLocation__c)),
	   NOT(ISBLANK(TEXT(Brand__c))),
				TEXT(PreferredLocation__r.LocationBrand__c) &lt;&gt;	TEXT(Brand__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UI Alert - Show Location Not From Brand</label>
    <type>Checkbox</type>
</CustomField>