src/orgs/usa/data-model/objects/Lead/fields/ShowUiAlert_PrimInsuranceNotFromServer__c.field-meta.xml
<CustomField>
    <fullName>ShowUiAlert_PrimInsuranceNotFromServer__c</fullName>
    <formula>AND(
    NOT(ISBLANK(EmrServer__c)),
				NOT(ISBLANK(PersonPrimaryInsuranceArtemisMetadata__c)),
				EmrServer__c != PersonPrimaryInsuranceArtemisMetadata__r.EmrServer__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UI Alert - Prim. Insur. not from Server</label>
    <type>Checkbox</type>
</CustomField>