src/orgs/usa/data-model/objects/Lead/fields/ShowUiAlert_SecInsuranceNotFromServer__c.field-meta.xml
<CustomField>
    <fullName>ShowUiAlert_SecInsuranceNotFromServer__c</fullName>
    <formula>AND(
    NOT(ISBLANK(EmrServer__c)),
				NOT(ISBLANK(PersonSecondaryInsuranceArtemisMetadata__c)),
				EmrServer__c != PersonSecondaryInsuranceArtemisMetadata__r.EmrServer__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UI Alert - Sec. Insur. not from Server</label>
    <type>Checkbox</type>
</CustomField>