src/orgs/usa/data-model/objects/Lead/fields/UnqualifiedReason__c.field-meta.xml
<CustomField>
    <fullName>UnqualifiedReason__c</fullName>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate or test lead</fullName>
            </value>
            <value>
                <fullName>No longer interested</fullName>
            </value>
            <value>
                <fullName>Requested we don&apos;t contact them</fullName>
            </value>
            <value>
                <fullName>Unable to contact</fullName>
            </value>
            <value>
                <fullName>Financial/Insurance issue</fullName>
            </value>
            <value>
                <fullName>Too far/distance</fullName>
            </value>
            <value>
                <fullName>Went to another clinic</fullName>
            </value>
            <value>
                <fullName>We don&apos;t offer procedure</fullName>
            </value>
            <value>
                <fullName>Won&apos;t wait for appointment</fullName>
            </value>
            <value>
                <fullName>Non patient inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>