src/orgs/usa/data-model/objects/Lead/fields/WebformComments__c.field-meta.xml
<CustomField>
    <fullName>WebformComments__c</fullName>
    <label>Webform Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>