src/orgs/usa/data-model/objects/Lead/fields/WebformPreferredLocation__c.field-meta.xml
<CustomField>
    <fullName>WebformPreferredLocation__c</fullName>
    <label>Webform Preferred Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>