src/orgs/usa/data-model/objects/Lead/fields/WebformRequesterPracticeName__c.field-meta.xml
<CustomField>
    <fullName>WebformRequesterPracticeName__c</fullName>
    <label>Webform Requester Practice Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>