src/orgs/usa/data-model/objects/Lead/fields/WebformServiceCommConsentGiven__c.field-meta.xml
<CustomField>
    <fullName>WebformServiceCommConsentGiven__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Webform Service Comm. Consent Given</label>
    <type>Checkbox</type>
</CustomField>